Revise MCP design and plan after adversarial review
Three adversarial reviews (security, implementation correctness, design)
found 16 substantiated issues, all verified against source before acting:

Would have broken the build or the packaged app:
- ReviewView's exhaustive AnnotationStatus switch expression
- WorktreeNaming package-private in app.drydock.ui
- buildResumeCommand dereferences its session argument immediately
- a third build*Command call site, plus 14 SessionManagerTest calls
- jdk.httpserver absent from the jlink module list

Would have corrupted data or shipped inert:
- AnnotationStore has no observers, so a stale ReviewView card's
  read-modify-write silently discards an MCP write
- notifications/initialized answered with -32601 risks the handshake
  never completing

Design fixes: branch-name validation (origin/main shadows the
remote-tracking ref), toRealPath membership, prompt sanitization,
depth-1 fan-out with per-session budgets, repos_list without ssh probes,
review_comments with base_branch and excerpt, review_reply replacing
review_mark_addressed.

Corrected two false claims in the spec: per-session isolation (the
boundary is the user account) and "create-only means the worst outcome
is clutter".

Plan grows from 8 to 12 tasks, reordered so each lands compile-clean.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>